# AnalisisRedes

./: README.md  main.py  pyproject.toml
Roblox/: .gitignore  README.md  mainroblox.py  pyproject.toml
Roblox/Scraping/: ApiHTML.py  config.toml  scrapearHTML.py
Roblox/analizarContenido/: analizarcontenido.py  datosagregados.py  datosderivados.py  datosprimitivos.py
Roblox/analizarEstructura/: analizarEstructura.py  crearEdgeList.py  datosgrafo.py  distancias.py  gradoyclustering.py  inicializardiccionarios.py  probabilidad.py
Roblox/dataSets/: datos_roblox.json
Roblox/extraerDatosHTML/: analizarHTML.py
Roblox/html_scrape/juego1/: grupo.html  juego.html
Roblox/html_scrape/juego10/: grupo.html  juego.html
Roblox/html_scrape/juego100/: grupo.html  juego.html
Roblox/html_scrape/juego101/: grupo.html  juego.html
Roblox/informes/: informe_contenido_roblox.py  informe_estructura_roblox.py  introduccion_roblox.py
Roblox/informesGenerados/: informe_introduccion.md  informe_roblox_contenido_11-01-2025_00-19.md  informe_roblox_estructura11-01-2025_00-19.md
Steam/: .gitignore  README.md  main.py  pyproject.toml
Steam/analizarContenido/: analizarcontenido.py  datosagregados.py  datosderivados.py  datosprimitivos.py  generar_informe.py
Steam/analizarEstructura/: analizarEstructura.py
Steam/analizarHTML/: analizar_HTML.py  dataset.json  steam_comentarios.py  steam_comunidades.py  steam_desarrolladores.py  steam_eventos.py  steam_juegos.py  steam_usuarios.py
Steam/scraping/: creacion_html.py  scraping.py  url.toml  webdriver.py
(+2653 files in other folders)
