[project]
name = "avances-proyecto-final"
version = "0.1.0"
description = "Gestión de scripts para Roblox y Steam"
dependencies = [
    "black>=24.10.0",
    "bs4>=0.0.2",
    "click>=8.1.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scipy>=1.15.0",
    "selenium>=4.27.1",
    "textblob>=0.18.0.post0",
    "toml>=0.10.2",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Steam", "Roblox"]
