[project]
name = "steam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "nltk>=3.9.0",
    "networkx>=3.0",
    "scipy>=1.10",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "requests>=2.32.3",
    "selenium>=4.25.0",
    "toml>=0.10.2",
    "webdriver-manager>=4.0.2",
    "black>=24.10.0",
    "click>=8.1.8",
]
